--- a/config/production.yaml
+++ b/config/production.yaml
@@ -87,20 +87,20 @@ workers:
   mode: BackgroundQueue
 
 # Mailer Configuration.
-mailer:
-  # SMTP mailer configuration.
-  smtp:
-    # Enable/Disable smtp mailer.
-    enable: true
-    # SMTP server host. e.x localhost, smtp.gmail.com
-    host: {{ get_env(name="MAILER_HOST", default="localhost") }}
-    # SMTP server port
-    port: 1025
-    # Use secure connection (SSL/TLS).
-    secure: false
-    # auth:
-    #   user:
-    #   password:
+# mailer:
+#   # SMTP mailer configuration.
+#   smtp:
+#     # Enable/Disable smtp mailer.
+#     enable: true
+#     # SMTP server host. e.x localhost, smtp.gmail.com
+#     host: {{ get_env(name="MAILER_HOST", default="localhost") }}
+#     # SMTP server port
+#     port: 1025
+#     # Use secure connection (SSL/TLS).
+#     secure: false
+#     # auth:
+#     #   user:
+#     #   password:
 
 # Initializers Configuration
 # initializers:
