--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,10 @@
 repos:
-- repo: https://github.com/biomejs/pre-commit
-  rev: "v0.3.0"  # Use the sha / tag you want to point at
-  hooks:
-  - id: biome-ci
-    additional_dependencies: ["@biomejs/biome@1.4.1"]
 - repo: https://github.com/doublify/pre-commit-rust
   rev: "v1.0"
   hooks:
   - id: fmt
   - id: cargo-check
+- repo: https://github.com/standard/standard
+  rev: "v17.1.0"
+  hooks:
+    - id: standard
