--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ eyre = "0.6"
 tokio = { version = "1.33.0", default-features = false }
 async-trait = "0.1.74"
 tracing = "0.1.40"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 validator = { version = "0.16" }
 sea-orm = { version = "1.0.0-rc.4", features = [
   "sqlx-sqlite",
