--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@mantine/modals": "^7.10.2",
+    "@mantine/notifications": "^7.10.2",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
